--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Coronavirus disease (COVID-19) | SOS Alert">
-  <meta name="author" content="Naveen Tech World">
-  <title>CoronaVirus (COVID-19) | India Tracker</title>
+  <meta name="description" content="Covid19 India Tracker">
+  <meta name="author" content="Naveen Kumar">
+  <title>Covid19 India Tracker</title>
   <!-- Favicon -->
   <link href="./assets/img/brand/favicon.ico" rel="icon" type="image/png">
   <!-- Fonts -->
