--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Covid19 India Tracker">
+  <meta name="description" content="Volunteer-driven initiative to track the spread of Coronavirus (COVID-19) in India">
+  <meta name="keywords" content="coronavirus,corona,covid,covid19,covid-19,covidindia,india,virus">
   <meta name="author" content="Naveen Kumar">
-  <title>Covid19 India Tracker</title>
+  <title>COVID-19 Tracker | India | Tamil Nadu</title>
   <!-- Favicon -->
   <link href="./assets/img/brand/favicon.ico" rel="icon" type="image/png">
   <!-- Fonts -->
