--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,24 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Volunteer-driven initiative to track the spread of Coronavirus (COVID-19) in India">
-  <meta name="keywords" content="coronavirus,corona,covid,covid19,covid-19,covidindia,india,virus">
+  <meta name="keywords" content="coronavirus,corona,covid,covid 19,covid-19,covidindia,india,virus, covid 19 latest news, covid 19 update, covid 19 symptoms, covid 19 cases by state, dashboard, covid 19 map, covid 19 stats, covid 19 tracker india">
   <meta name="author" content="Naveen Kumar">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://covid19indiatracker.com/">
+  <meta property="og:title" content="COVID-19 Tracker | India | Tamil Nadu">
+  <meta property="og:description" content="Volunteer-driven initiative to track the spread of Coronavirus (COVID-19) in India">">
+  <meta property="og:image" content="https://i.ibb.co/G7xZgHT/covid19indiatracker-com.jpg">
+
+  !-- Twitter -->
+  <meta property="twitter:card" content="COVID-19 Tracker | India | Tamil Nadu">
+  <meta property="twitter:url" content="https://covid19indiatracker.com/">
+  <meta property="twitter:title" content="COVID-19 Tracker | India | Tamil Nadu">
+  <meta property="twitter:description" content="Volunteer-driven initiative to track the spread of Coronavirus (COVID-19) in India">">
+  <meta property="twitter:image" content="https://i.ibb.co/G7xZgHT/covid19indiatracker-com.jpg">
+
+
   <title>COVID-19 Tracker | India | Tamil Nadu</title>
   <!-- Favicon -->
   <link href="./assets/img/brand/favicon.ico" rel="icon" type="image/png">
