Tamil Nadu District Splitup

--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,14 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://covid19indiatracker.com/">
   <meta property="og:title" content="COVID-19 Tracker | India | Tamil Nadu">
-  <meta property="og:description" content="Volunteer-driven initiative to track the spread of Coronavirus (COVID-19) in India">">
+  <meta property="og:description" content="Volunteer-driven initiative to track the spread of Coronavirus (COVID-19) in India">
   <meta property="og:image" content="https://i.ibb.co/G7xZgHT/covid19indiatracker-com.jpg">
 
-  !-- Twitter -->
+  <!-- Twitter -->
   <meta property="twitter:card" content="COVID-19 Tracker | India | Tamil Nadu">
   <meta property="twitter:url" content="https://covid19indiatracker.com/">
   <meta property="twitter:title" content="COVID-19 Tracker | India | Tamil Nadu">
-  <meta property="twitter:description" content="Volunteer-driven initiative to track the spread of Coronavirus (COVID-19) in India">">
+  <meta property="twitter:description" content="Volunteer-driven initiative to track the spread of Coronavirus (COVID-19) in India">
   <meta property="twitter:image" content="https://i.ibb.co/G7xZgHT/covid19indiatracker-com.jpg">
 
 
